# TrafficManagement

./: CMakeLists.txt  CMakeLists.txt.HPecWy  Main.qml  main.cpp
qml/: SimulationEngine.qml
qml/components/: PositionCalculator.qml  Timecounter.qml  TrafficLight.qml  Vehicle.qml
qml/pages/: Area.qml  ControlPanel.qml  area.qml
src/core/: CMakeLists.txt  controlpanelhandler.cpp  controlpanelhandler.h  positioncalculator.cpp  positioncalculator.h  primaryisoscene.cpp  primaryisoscene.h  simulationengine.cpp  simulationengine.h  trafficcontroller.cpp  trafficcontroller.h  vehiclemodel.cpp  vehiclemodel.h
src/utils/: CMakeLists.txt
